fix alignment issue

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,6 +11,7 @@ header {
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
   z-index: 10;
 
   a {
@@ -106,6 +107,10 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
+
+  & > * {
+    padding: 1rem 0;
+  }
 }
 
 @media screen and (min-width: 60em) {
